--- a/www/templates/searchFlight.html
+++ b/www/templates/searchFlight.html
@@ -20,7 +20,7 @@
   }
 
   #logo{
-    width: 20%;
+    width: 30%;
     height: auto;
   }
 
@@ -32,14 +32,14 @@
     border: 2px solid #007aff;
     border-radius: 8%;
     color: white;
-    padding: 6px 14px;
+    padding: 4px 12px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 11px;
     margin: 4px 2px;
     cursor: pointer;
-    -webkit-transition-duration: 0.4s; /* Safari */
+    -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   }
@@ -81,6 +81,24 @@
       </ion-item>
       <ion-item class="item-thumbnail-left" id="searchFlight-list-item46">
         <img id="logo" src="img/Transavia_logo.svg.png">
+        <h2>Madeira, Portugal</h2>
+        <p>Lisbon, Portugal</p>
+        <button id="buy-button" onclick="visitPage();">Details</button>
+      </ion-item>
+      <ion-item class="item-thumbnail-left" id="searchFlight-list-item46">
+        <img id="logo" src="img/tap.png">
+        <h2>Madeira, Portugal</h2>
+        <p>Lisbon, Portugal</p>
+        <button id="buy-button" onclick="visitPage();">Details</button>
+      </ion-item>
+      <ion-item class="item-thumbnail-left" id="searchFlight-list-item46">
+        <img id="logo" src="img/easy.png">
+        <h2>Madeira, Portugal</h2>
+        <p>Lisbon, Portugal</p>
+        <button id="buy-button" onclick="visitPage();">Details</button>
+      </ion-item>
+      <ion-item class="item-thumbnail-left" id="searchFlight-list-item46">
+        <img id="logo" src="img/vuelling.png">
         <h2>Madeira, Portugal</h2>
         <p>Lisbon, Portugal</p>
         <button id="buy-button" onclick="visitPage();">Details</button>
