--- a/www/templates/searchFlight.html
+++ b/www/templates/searchFlight.html
@@ -24,7 +24,7 @@
     height: auto;
   }
 
-  #buy-button{
+  #details-button{
     position: relative;
     float: right;
     top: 8px;
@@ -44,11 +44,87 @@
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   }
 
-  #buy-button:hover{
+  #details-button:hover{
     background-color: white;
     border: 2px solid #007aff;
     color: black;
   }
+
+  .modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#details-button-modal{
+  position: relative;
+  float: left;
+  top: -15px;
+  background-color: #007aff;
+  border: 2px solid #007aff;
+  border-radius: 8%;
+  color: white;
+  padding: 3px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 11px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+#favorite-button-modal{
+  position: relative;
+  float: left;
+  top: -15px;
+  background-color: rgb(201, 61, 61);
+  border: 2px solid rgb(201, 61, 61);
+  border-radius: 8%;
+  color: white;
+  padding: 3px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 11px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
 </style>
 
 <ion-view id="page6">
@@ -75,39 +151,80 @@
       </label>
       <ion-item class="item-thumbnail-left" id="searchFlight-list-item45">
         <img id="logo" src="img/sata.png">
-        <h2 style="width: 100%;">Madeira, Portugal</h2>
+        <h2>Madeira, Portugal</h2>
         <p>Lisbon, Portugal</p>
-        <button id="buy-button" onclick="visitPage();">Details</button>
+        <button id="details-button">Details</button>
       </ion-item>
       <ion-item class="item-thumbnail-left" id="searchFlight-list-item46">
         <img id="logo" src="img/Transavia_logo.svg.png">
         <h2>Madeira, Portugal</h2>
         <p>Lisbon, Portugal</p>
-        <button id="buy-button" onclick="visitPage();">Details</button>
+        <button id="details-button">Details</button>
       </ion-item>
       <ion-item class="item-thumbnail-left" id="searchFlight-list-item46">
         <img id="logo" src="img/tap.png">
         <h2>Madeira, Portugal</h2>
         <p>Lisbon, Portugal</p>
-        <button id="buy-button" onclick="visitPage();">Details</button>
+        <button id="details-button">Details</button>
       </ion-item>
       <ion-item class="item-thumbnail-left" id="searchFlight-list-item46">
         <img id="logo" src="img/easy.png">
         <h2>Madeira, Portugal</h2>
         <p>Lisbon, Portugal</p>
-        <button id="buy-button" onclick="visitPage();">Details</button>
+        <button id="details-button">Details</button>
       </ion-item>
       <ion-item class="item-thumbnail-left" id="searchFlight-list-item46">
         <img id="logo" src="img/vuelling.png">
         <h2>Madeira, Portugal</h2>
         <p>Lisbon, Portugal</p>
-        <button id="buy-button" onclick="visitPage();">Details</button>
+
+
+        <div id="myModal" class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <img id="logo" src="img/sata.png">
+            <p></p>
+            <p>From: Madeira, Portugal</p>
+            <p>To: Lisbon, Portugal</p>
+            <p>Airline: SATA</p>
+            <p>Departure: hh-mm</p>
+            <p>Arrival: hh-mm</p>
+            <p>Price: 40€</p>
+            <hr>
+            <button id="details-button-modal">Buy</button>
+            <button id="favorite-button-modal">Add to Favorites</button>
+          </div>
+        </div>
+        <button id="details-button">Details</button>
       </ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
-<script>
-      function visitPage(){
-        window.location='https://www.google.com/';
+<script>  
+
+    // Get the modal
+    var modal = document.getElementById("myModal");
+
+    // Get the button that opens the modal
+    var btn = document.getElementById("details-button");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks the button, open the modal 
+    btn.onclick = function() {
+      modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
     }
 </script>
