--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -22,13 +22,12 @@
   function login() {
     var email = document.getElementById("email").value;
     var pw = document.getElementById("password").value;
-    localStorage['loggedIn'] = "true";
-    document.location.href = "#/page1/page5";
-    /*if (email === localStorage.getItem('email') && pw === localStorage.getItem('password')) {
+
+    if (email === localStorage.getItem('email') && pw === localStorage.getItem('password')) {
       localStorage['loggedIn'] = "true";
       document.location.href = "#/page1/page5";
     } else {
       alert("Incorrect Credentials!");
-    }*/
+    }
   }
 </script>
