--- a/www/templates/searchFlight.html
+++ b/www/templates/searchFlight.html
@@ -40,6 +40,11 @@
     margin-top: 165px;
   }
 
+  #logo0{
+    width: 30%;
+    height: auto;
+  }
+
   #logo{
     position: absolute;
     vertical-align: auto;
@@ -99,15 +104,6 @@
     font-size: 11px;
     margin: 4px 2px;
     cursor: pointer;
-    -webkit-transition-duration: 0.4s;
-    transition-duration: 0.4s;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-  }
-
-  .details-button:hover{
-    background-color: white;
-    border: 2px solid #007aff;
-    color: black;
   }
 
   .modal {
@@ -219,7 +215,7 @@
           <h3 class="price">40€</h3>
         </div>
         <div class="flightt2">
-          <h2>AND COME</h2>
+          <h2>RETURN</h2>
           <p><i class="icon ion-arrow-up-c"></i>10:15pm</p>
           <p><i class="icon ion-arrow-down-c"></i>0:30am</p>
           <h3 class="price">92€</h3>
@@ -234,7 +230,7 @@
           <h3 class="price">40€</h3>
         </div>
         <div class="flightt2">
-          <h2>AND COME</h2>
+          <h2>RETURN</h2>
           <p><i class="icon ion-arrow-up-c"></i>10:15pm</p>
           <p><i class="icon ion-arrow-down-c"></i>0:30am</p>
           <h3 class="price">92€</h3>
@@ -250,7 +246,7 @@
           <h3 class="price">40€</h3>
         </div>
         <div class="flightt2">
-          <h2>AND COME</h2>
+          <h2>RETURN</h2>
           <p><i class="icon ion-arrow-up-c"></i>10:15pm</p>
           <p><i class="icon ion-arrow-down-c"></i>0:30am</p>
           <h3 class="price">92€</h3>
@@ -266,7 +262,7 @@
           <h3 class="price">40€</h3>
         </div>
         <div class="flightt2">
-          <h2>AND COME</h2>
+          <h2>RETURN</h2>
           <p><i class="icon ion-arrow-up-c"></i>10:15pm</p>
           <p><i class="icon ion-arrow-down-c"></i>0:30am</p>
           <h3 class="price">92€</h3>
@@ -275,31 +271,42 @@
       </ion-item>
       <ion-item class="item-thumbnail-right" id="searchFlight-list-item46">
         <img id="logo" src="img/vuelling.png">
-        <h2>Madeira, Portugal</h2>
-        <p>Lisbon, Portugal</p>
-        <button class="details-button">Details</button>
-
-
-        <div id="myModal" class="modal">
-          <div class="modal-content">
-            <span class="close">&times;</span>
-            <img id="logo" src="img/sata.png">
-            <p></p>
-            <p>From: Madeira, Portugal</p>
-            <p>To: Lisbon, Portugal</p>
-            <p>Airline: SATA</p>
-            <p>Departure: hh-mm</p>
-            <p>Arrival: hh-mm</p>
-            <p>Price: 40€</p>
-            <hr>
-            <button id="details-button-modal">Buy</button>
-            <button id="favorite-button-modal">Add to Favorites</button>
-          </div>
+        <div class="flightt" >
+          <h2>GO</h2>
+          <p><i class="icon ion-arrow-up-c"></i>6:00am</p>
+          <p><i class="icon ion-arrow-down-c"></i>9:45am</p>
+          <h3 class="price">40€</h3>
         </div>
+        <div class="flightt2">
+          <h2>RETURN</h2>
+          <p><i class="icon ion-arrow-up-c"></i>10:15pm</p>
+          <p><i class="icon ion-arrow-down-c"></i>0:30am</p>
+          <h3 class="price">92€</h3>
+        </div>
+        <button class="details-button">Details</button>
         <button id="details-button" style="display: none;">Details</button>
       </ion-item>
     </ion-list>
   </ion-content>
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <img id="logo0" src="img/sata.png">
+      <p></p>
+      <p>From: Rinas, Albânia</p>
+      <p>Airport: Tirana Madre Teresa</p>
+      <p>To: Madrid, Spain</p>
+      <p>Airport: Madrid-Barajas</p>
+      <p>Airline: SATA</p>
+      <p>Departure: hh-mm</p>
+      <p>Arrival: hh-mm</p>
+      <p>Price: 40€</p>
+      <p>Available seats: 26</p>
+      <hr>
+      <button id="details-button-modal">Buy</button>
+      <button id="favorite-button-modal">Add to Favorites</button>
+    </div>
+  </div>
 </ion-view>
 <script>  
 
