added one more item searchFlight

--- a/www/templates/searchFlight.html
+++ b/www/templates/searchFlight.html
@@ -150,7 +150,7 @@
   border: 2px solid #007aff;
   border-radius: 8%;
   color: white;
-  padding: 3px 10px;
+  padding: 4px 12px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -170,7 +170,7 @@
   border: 2px solid rgb(201, 61, 61);
   border-radius: 8%;
   color: white;
-  padding: 3px 10px;
+  padding: 4px 12px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -239,6 +239,22 @@
       </ion-item>
       <ion-item class="item-thumbnail-right" id="searchFlight-list-item46">
         <img id="logo3" src="img/tap.png">
+        <div class="flightt" >
+          <h2>GO</h2>
+          <p><i class="icon ion-arrow-up-c"></i>6:00am</p>
+          <p><i class="icon ion-arrow-down-c"></i>9:45am</p>
+          <h3 class="price">40€</h3>
+        </div>
+        <div class="flightt2">
+          <h2>RETURN</h2>
+          <p><i class="icon ion-arrow-up-c"></i>10:15pm</p>
+          <p><i class="icon ion-arrow-down-c"></i>0:30am</p>
+          <h3 class="price">92€</h3>
+        </div>
+        <button class="details-button">Details</button>
+      </ion-item>
+      <ion-item class="item-thumbnail-right" id="searchFlight-list-item46">
+        <img id="logo" src="img/easy.png">
         <div class="flightt" >
           <h2>GO</h2>
           <p><i class="icon ion-arrow-up-c"></i>6:00am</p>
