changed images to left

--- a/www/templates/favorites.html
+++ b/www/templates/favorites.html
@@ -2,7 +2,8 @@
 #icon{
   font-size: 30px; 
   color: red; 
-  position: relative; 
+  position: relative;
+  float: right; 
   top: 10px;
 }
 
@@ -24,19 +25,19 @@
       <button id="favorites-button12" class="button button-stable button-small button-block">Favorites</button>
     </div>
     <ion-list id="favorites-list4">
-      <ion-item class="item-thumbnail-right" id="favorites-list-item10" ui-sref="tabsController.book()">
+      <ion-item class="item-thumbnail-left" id="favorites-list-item10" ui-sref="tabsController.book()">
           <img id="thumbnail" src="img/HutWGo5IRCupJxmDu4dv_madeira.jpeg">
         <h3>From: Paris, France</h3>
         <h3>To: Paris, France</h3>
         <i id="icon" class="icon ion-heart"></i>
       </ion-item>
-      <ion-item class="item-thumbnail-right" id="favorites-list-item11" ui-sref="tabsController.book()">
+      <ion-item class="item-thumbnail-left" id="favorites-list-item11" ui-sref="tabsController.book()">
         <img id="thumbnail" src="img/HutWGo5IRCupJxmDu4dv_madeira.jpeg">
         <h3>From: Madrid, Spain</h3>
         <h3>To: Madrid, Spain</h3>
         <i id="icon" class="icon ion-heart"></i>
       </ion-item>
-      <ion-item class="item-thumbnail-right" id="favorites-list-item12" ui-sref="tabsController.book()">
+      <ion-item class="item-thumbnail-left" id="favorites-list-item12" ui-sref="tabsController.book()">
         <img id="thumbnail" src="img/HutWGo5IRCupJxmDu4dv_madeira.jpeg">
         <h3>From: Warsaw, Poland</h3>
         <h3>To: Warsaw, Poland</h3>
