--- a/www/templates/myFlights.html
+++ b/www/templates/myFlights.html
@@ -48,37 +48,37 @@
         <img id="thumbnail" src="img/HutWGo5IRCupJxmDu4dv_madeira.jpeg">
         <h2>Madeira, Portugal</h2>
         <p>Lisbon, Portugal</p>
-        <button id="buy-button" onclick="visitPage();">Buy</button>
+        <button id="buy-button" onclick="visitPage();">Reorder</button>
       </ion-item>
       <ion-item class="item-thumbnail-left" id="myFlights-list-item3">
         <img id="thumbnail" src="img/2eW1xoJT8qzTnEk2ftSQ_holland.png">
         <h2>Lisse, Holland</h2>
         <p>Lisbon, Portugal</p>
-        <button id="buy-button" onclick="visitPage();">Buy</button>
+        <button id="buy-button" onclick="visitPage();">Reorder</button>
       </ion-item>
       <ion-item class="item-thumbnail-left" id="myFlights-list-item4">
         <img id="thumbnail" src="img/VXADY99Q0umDCqYDYj6O_italy.jpg">
         <h2>Rome, Italy</h2>
         <p>Lisbon, Portugal</p>
-        <button id="buy-button" onclick="visitPage();">Buy</button>
+        <button id="buy-button" onclick="visitPage();">Reorder</button>
       </ion-item>
       <ion-item class="item-thumbnail-left" id="myFlights-list-item5">
         <img id="thumbnail" src="img/Osumpp9TM6m7lxE46hKA_barbados-medium.png">
         <h2>Bridgetown, Barbados</h2>
         <p>Lisbon, Portugal</p>
-        <button id="buy-button" onclick="visitPage();">Buy</button>
+        <button id="buy-button" onclick="visitPage();">Reorder</button>
       </ion-item>
       <ion-item class="item-thumbnail-left" id="myFlights-list-item7">
         <img id="thumbnail" src="img/BWSPyI9cQuzNUJLN9Hy4_greece.png">
         <h2>Athens, Greece</h2>
         <p>Lisbon, Portugal</p>
-        <button id="buy-button" onclick="visitPage();">Buy</button>
+        <button id="buy-button" onclick="visitPage();">Reorder</button>
       </ion-item>
       <ion-item class="item-thumbnail-left" id="myFlights-list-item9">
         <img id="thumbnail" src="img/rYpuYQEIR5qrE3rUzvei_azores.jpg">
         <h2>Azores, Portugal</h2>
         <p>Lisbon, Portugal</p>
-        <button id="buy-button" onclick="visitPage();">Buy</button>
+        <button id="buy-button" onclick="visitPage();">Reorder</button>
       </ion-item>
     </ion-list>
   </ion-content>
