--- a/www/templates/favorites.html
+++ b/www/templates/favorites.html
@@ -1,10 +1,9 @@
 <style>
 #icon{
-  font-size: 30px; 
+  font-size: 35px; 
   color: red; 
   position: relative;
   float: right; 
-  top: 10px;
 }
 
 #thumbnail{
@@ -17,6 +16,32 @@
   opacity: 0.7;
 }
 
+#buy-button{
+    position: relative;
+    float: right;
+    top: 8px;
+    background-color: #007aff;
+    border: 2px solid #007aff;
+    border-radius: 8%;
+    color: white;
+    padding: 6px 14px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 11px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  }
+
+  #buy-button:hover{
+    background-color: white;
+    border: 2px solid #007aff;
+    color: black;
+  }
+
 </style>
 <ion-view id="page7">
   <ion-content padding="true" class="has-header">
@@ -25,24 +50,32 @@
       <button id="favorites-button12" class="button button-stable button-small button-block">Favorites</button>
     </div>
     <ion-list id="favorites-list4">
-      <ion-item class="item-thumbnail-left" id="favorites-list-item10" ui-sref="tabsController.book()">
+      <ion-item class="item-thumbnail-left" id="favorites-list-item10"">
           <img id="thumbnail" src="img/HutWGo5IRCupJxmDu4dv_madeira.jpeg">
+          <i id="icon" class="icon ion-ios-heart" onclick="changeIcon(this)"></i>
         <h3>From: Paris, France</h3>
         <h3>To: Paris, France</h3>
-        <i id="icon" class="icon ion-heart"></i>
+        <button id="buy-button" onclick="visitPage();">Buy</button>
       </ion-item>
-      <ion-item class="item-thumbnail-left" id="favorites-list-item11" ui-sref="tabsController.book()">
+      <ion-item class="item-thumbnail-left" id="favorites-list-item11"">
         <img id="thumbnail" src="img/HutWGo5IRCupJxmDu4dv_madeira.jpeg">
+        <i id="icon" class="ion-ios-heart" onclick="changeIcon(this)"></i>
         <h3>From: Madrid, Spain</h3>
         <h3>To: Madrid, Spain</h3>
-        <i id="icon" class="icon ion-heart"></i>
+        <button id="buy-button" onclick="visitPage();">Buy</button>
       </ion-item>
-      <ion-item class="item-thumbnail-left" id="favorites-list-item12" ui-sref="tabsController.book()">
+      <ion-item class="item-thumbnail-left" id="favorites-list-item12"">
         <img id="thumbnail" src="img/HutWGo5IRCupJxmDu4dv_madeira.jpeg">
+        <i id="icon" class="ion-ios-heart" onclick="changeIcon(this)"></i>
         <h3>From: Warsaw, Poland</h3>
         <h3>To: Warsaw, Poland</h3>
-        <i id="icon" class="icon ion-heart"></i>
+        <button id="buy-button" onclick="visitPage();">Buy</button>
       </ion-item>
     </ion-list>
   </ion-content>  
 </ion-view>
+<script>
+function changeIcon(x) {
+  x.classList.toggle("ion-ios-heart-outline");
+}
+</script>
