--- a/www/templates/book.html
+++ b/www/templates/book.html
@@ -26,7 +26,7 @@
         <i class="icon ion-plane placeholder-icon"></i>
         <input type="search" placeholder="To">
       </label>
-      <ion-checkbox class="checkbox-square" id="book-checkbox1" onclick="validate()">Round Trip</ion-checkbox>
+      <ion-checkbox class="checkbox-square" id="book-checkbox1" onclick="toggle()">Round Trip</ion-checkbox>
       <div id="book-container1">
         <form id="book-form16" class="list">
           <div>
@@ -72,7 +72,7 @@
         localStorage['loggedIn'] = "false";
     });
 
-    function validate(){
+    function toggle(){
       $("#enddate").toggle();
     }
 </script>
