added button searchFlight.html

--- a/www/templates/searchFlight.html
+++ b/www/templates/searchFlight.html
@@ -303,6 +303,7 @@
         <button id="details-button" style="display: none;">Details</button>
       </ion-item>
     </ion-list>
+    <button ui-sref="tabsController.profile()" id="button-back" class="button button-stable button-block">Back</button>
   </ion-content>
   <div id="myModal" class="modal">
     <div class="modal-content">
