--- a/www/templates/favorites.html
+++ b/www/templates/favorites.html
@@ -78,4 +78,8 @@
 function changeIcon(x) {
   x.classList.toggle("ion-ios-heart-outline");
 }
+
+function visitPage(){
+        window.location='index.html#/page6';
+    }
 </script>
