--- a/www/templates/myFlights.html
+++ b/www/templates/myFlights.html
@@ -85,7 +85,7 @@
 </ion-view>
 <script>
     function visitPage(){
-        window.location='https://www.google.com/';
+        window.location='index.html#/page6';
     }
 
   if (localStorage.getItem('loggedIn') === "false") {
