--- a/www/templates/searchFlight.html
+++ b/www/templates/searchFlight.html
@@ -303,7 +303,7 @@
         <button id="details-button" style="display: none;">Details</button>
       </ion-item>
     </ion-list>
-    <button ui-sref="tabsController.profile()" id="button-back" class="button button-stable button-block">Back</button>
+    <button ui-sref="tabsController.book()" onclick="visitPage();" id="button-back" class="button button-stable button-block">Back</button>
   </ion-content>
   <div id="myModal" class="modal">
     <div class="modal-content">
@@ -362,4 +362,9 @@
         modal.style.display = "none";
       }
     }
+
+    function visitPage(){
+        window.location='index.html#/page1';
+    }
+
 </script>
