--- a/www/templates/searchFlight.html
+++ b/www/templates/searchFlight.html
@@ -181,15 +181,23 @@
   transition-duration: 0.4s;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
+
+#icon1{
+    transform: rotate(45deg);
+  }
+
+  #icon2{
+    transform: rotate(135deg);
+  }
 </style>
 
 <ion-view id="page6">
   <ion-content padding="true" class="has-header">
     <ion-list id="searchFlight-list6">
       <ion-item class="item-icon-left" id="searchFlight-list-item19">
-        <i class="icon ion-android-plane"></i>Albania</ion-item>
+        <i class="icon ion-android-plane" id="icon1"></i>Albania</ion-item>
       <ion-item class="item-icon-left" id="searchFlight-list-item20">
-        <i class="icon ion-android-plane"></i>Spain</ion-item>
+        <i class="icon ion-android-plane" id="icon2"></i>Spain</ion-item>
       <ion-item class="item-icon-left" id="searchFlight-list-item37">
         <i class="icon ion-android-calendar"></i>27/05/20221</ion-item>
       <ion-item class="item-icon-left" id="searchFlight-list-item38">
