generates random hours and prices for flights

--- a/www/templates/searchFlight.html
+++ b/www/templates/searchFlight.html
@@ -218,30 +218,30 @@
         <button class="details-button">Details</button>
         <div class="flightt" >
           <h2>GO</h2>
-          <p><i class="icon ion-arrow-up-c"></i>6:00am</p>
-          <p><i class="icon ion-arrow-down-c"></i>9:45am</p>
-          <h3 class="price">40€</h3>
+          <p class="go-times"><i class="icon ion-arrow-up-c"></i></p>
+          <p class="return-times"><i class="icon ion-arrow-down-c"></i></p>
+          <h3 class="price"></h3>
         </div>
         <div class="flightt2">
           <h2>RETURN</h2>
-          <p><i class="icon ion-arrow-up-c"></i>10:15pm</p>
-          <p><i class="icon ion-arrow-down-c"></i>0:30am</p>
-          <h3 class="price">92€</h3>
+          <p class="go-times"><i class="icon ion-arrow-up-c"></i></p>
+          <p class="return-times"><i class="icon ion-arrow-down-c"></i></p>
+          <h3 class="price"></h3>
         </div>
       </ion-item>
       <ion-item class="item-thumbnail-right" id="searchFlight-list-item46">
         <img id="logo2" src="img/Transavia_logo.svg.png">
         <div class="flightt" >
           <h2>GO</h2>
-          <p><i class="icon ion-arrow-up-c"></i>6:00am</p>
-          <p><i class="icon ion-arrow-down-c"></i>9:45am</p>
-          <h3 class="price">40€</h3>
+          <p class="go-times"><i class="icon ion-arrow-up-c"></i></p>
+          <p class="return-times"><i class="icon ion-arrow-down-c"></i></p>
+          <h3 class="price"></h3>
         </div>
         <div class="flightt2">
           <h2>RETURN</h2>
-          <p><i class="icon ion-arrow-up-c"></i>10:15pm</p>
-          <p><i class="icon ion-arrow-down-c"></i>0:30am</p>
-          <h3 class="price">92€</h3>
+          <p class="go-times"><i class="icon ion-arrow-up-c"></i></p>
+          <p class="return-times"><i class="icon ion-arrow-down-c"></i></p>
+          <h3 class="price"></h3>
         </div>
         <button class="details-button">Details</button>
       </ion-item>
@@ -249,15 +249,15 @@
         <img id="logo3" src="img/tap.png">
         <div class="flightt" >
           <h2>GO</h2>
-          <p><i class="icon ion-arrow-up-c"></i>6:00am</p>
-          <p><i class="icon ion-arrow-down-c"></i>9:45am</p>
-          <h3 class="price">40€</h3>
+          <p class="go-times"><i class="icon ion-arrow-up-c"></i></p>
+          <p class="return-times"><i class="icon ion-arrow-down-c"></i></p>
+          <h3 class="price"></h3>
         </div>
         <div class="flightt2">
           <h2>RETURN</h2>
-          <p><i class="icon ion-arrow-up-c"></i>10:15pm</p>
-          <p><i class="icon ion-arrow-down-c"></i>0:30am</p>
-          <h3 class="price">92€</h3>
+          <p class="go-times"><i class="icon ion-arrow-up-c"></i></p>
+          <p class="return-times"><i class="icon ion-arrow-down-c"></i></p>
+          <h3 class="price"></h3>
         </div>
         <button class="details-button">Details</button>
       </ion-item>
@@ -265,15 +265,15 @@
         <img id="logo" src="img/easy.png">
         <div class="flightt" >
           <h2>GO</h2>
-          <p><i class="icon ion-arrow-up-c"></i>6:00am</p>
-          <p><i class="icon ion-arrow-down-c"></i>9:45am</p>
-          <h3 class="price">40€</h3>
+          <p class="go-times"><i class="icon ion-arrow-up-c"></i></p>
+          <p class="return-times"><i class="icon ion-arrow-down-c"></i></p>
+          <h3 class="price"></h3>
         </div>
         <div class="flightt2">
           <h2>RETURN</h2>
-          <p><i class="icon ion-arrow-up-c"></i>10:15pm</p>
-          <p><i class="icon ion-arrow-down-c"></i>0:30am</p>
-          <h3 class="price">92€</h3>
+          <p class="go-times"><i class="icon ion-arrow-up-c"></i></p>
+          <p class="return-times"><i class="icon ion-arrow-down-c"></i></p>
+          <h3 class="price"></h3>
         </div>
         <button class="details-button">Details</button>
       </ion-item>
@@ -281,15 +281,15 @@
         <img id="logo" src="img/easy.png">
         <div class="flightt" >
           <h2>GO</h2>
-          <p><i class="icon ion-arrow-up-c"></i>6:00am</p>
-          <p><i class="icon ion-arrow-down-c"></i>9:45am</p>
-          <h3 class="price">40€</h3>
+          <p class="go-times"><i class="icon ion-arrow-up-c"></i></p>
+          <p class="return-times"><i class="icon ion-arrow-down-c"></i></p>
+          <h3 class="price"></h3>
         </div>
         <div class="flightt2">
           <h2>RETURN</h2>
-          <p><i class="icon ion-arrow-up-c"></i>10:15pm</p>
-          <p><i class="icon ion-arrow-down-c"></i>0:30am</p>
-          <h3 class="price">92€</h3>
+          <p class="go-times"><i class="icon ion-arrow-up-c"></i></p>
+          <p class="return-times"><i class="icon ion-arrow-down-c"></i></p>
+          <h3 class="price"></h3>
         </div>
         <button class="details-button">Details</button>
       </ion-item>
@@ -297,15 +297,15 @@
         <img id="logo" src="img/vuelling.png">
         <div class="flightt" >
           <h2>GO</h2>
-          <p><i class="icon ion-arrow-up-c"></i>6:00am</p>
-          <p><i class="icon ion-arrow-down-c"></i>9:45am</p>
-          <h3 class="price">40€</h3>
+          <p class="go-times"><i class="icon ion-arrow-up-c"></i></p>
+          <p class="return-times"><i class="icon ion-arrow-down-c"></i></p>
+          <h3 class="price"></h3>
         </div>
         <div class="flightt2">
           <h2>RETURN</h2>
-          <p><i class="icon ion-arrow-up-c"></i>10:15pm</p>
-          <p><i class="icon ion-arrow-down-c"></i>0:30am</p>
-          <h3 class="price">92€</h3>
+          <p class="go-times"><i class="icon ion-arrow-up-c"></i></p>
+          <p class="return-times"><i class="icon ion-arrow-down-c"></i></p>
+          <h3 class="price"></h3>
         </div>
         <button class="details-button">Details</button>
         <button id="details-button" style="display: none;">Details</button>
@@ -375,4 +375,37 @@
         window.location='index.html#/page1';
     }
 
+    function randomNumber(min, max) {  
+      return Math.floor(Math.random() * (max - min) + min); 
+    }
+
+    function pad(num, size) {
+      num = num.toString();
+      while (num.length < size) num = "0" + num;
+      return num;
+    }
+    
+    // generate random prices
+    var text = document.querySelectorAll(".price");
+    text.forEach(element => element.innerHTML += randomNumber(40, 99)+'€');
+
+    //generate random hours
+    minutes = ["00","15","30","45"];
+    go_times = [];
+    return_times = [];
+    //go hours
+    text = document.querySelectorAll(".go-times");
+    for (var i = 0; i < text.length; i++) {
+      var rand = randomNumber(0, 14);
+      var rnd = ` ${pad(rand,2)}:${minutes[Math.floor(Math.random() * minutes.length)]}h`
+      go_times.push(rand);
+      text[i].innerHTML += rnd;
+    }
+    
+    //return hours
+    text = document.querySelectorAll(".return-times");
+    for (var i = 0; i < text.length; i++) {
+      var rnd = ` ${pad(randomNumber(go_times[i], 23),2)}:${minutes[Math.floor(Math.random() * minutes.length)]}h`
+      text[i].innerHTML += rnd;
+    }
 </script>
